--- a/DataCollectionReciever/pom.xml
+++ b/DataCollectionReciever/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>StationDataCollector</artifactId>
+    <artifactId>DataCollectionReciever</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
