erste queues werden geladen - RestService zu Reciever und Collector

--- a/RESTECharging/pom.xml
+++ b/RESTECharging/pom.xml
@@ -32,6 +32,14 @@
             <artifactId>activemq-core</artifactId>
             <version>5.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-broker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
