--- a/StationDataCollector/pom.xml
+++ b/StationDataCollector/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
